--- a/Front-end/styles/contact.css
+++ b/Front-end/styles/contact.css
@@ -413,7 +413,7 @@
 
 .embed-card .card-body {
   padding: 0 !important;
-  min-height: 500px;
+  min-height: 420px;
   height: 100%;
   display: flex;
   align-items: stretch;
@@ -425,7 +425,7 @@
 .elfsight-app-fe189f22-bf26-437b-aed6-dda28d5e9e47,
 .embed-card .card-body > div {
   width: 100%;
-  min-height: 500px;
+  min-height: 420px;
   height: 100%;
   display: flex;
 }
@@ -436,7 +436,7 @@
   width: 100%;
   height: 100%;
   border: none;
-  min-height: 500px;
+  min-height: 420px;
   flex: 1;
 }
 
@@ -589,7 +589,15 @@
   }
 
   .map-container {
-    height: 1px;
+    height: 320px;
+  }
+
+  .embed-card .card-body,
+  .elfsight-app-fe189f22-bf26-437b-aed6-dda28d5e9e47,
+  .embed-card .card-body > div,
+  .mapa-redondeado,
+  .embed-card .card-body iframe {
+    min-height: 360px;
   }
 }
 
@@ -616,5 +624,17 @@
   .contact-info-item i {
     margin-right: 0;
     margin-bottom: 0.8rem;
+  }
+
+  .map-container {
+    height: 280px;
+  }
+
+  .embed-card .card-body,
+  .elfsight-app-fe189f22-bf26-437b-aed6-dda28d5e9e47,
+  .embed-card .card-body > div,
+  .mapa-redondeado,
+  .embed-card .card-body iframe {
+    min-height: 300px;
   }
 }
